Make frontend asset copy tolerant of missing ws bundle

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -38,7 +38,11 @@ jobs:
           npm ci
           npm run build
           mkdir -p dist
-          cp -f selkies-core.js selkies-wr-core.js selkies-ws-core.js dist/
+          for f in selkies-core.js selkies-wr-core.js selkies-ws-core.js; do
+            if [ -f "$f" ]; then
+              cp -f "$f" dist/
+            fi
+          done
           rm -rf dist/lib
           cp -a lib dist/lib
 
