Add configurable window manager launch after X11 startup
- Add window_manager config option (default: "openbox")
- Start window manager process on managed X11 display
- Check command availability before launching

--- a/config.example.toml
+++ b/config.example.toml
@@ -12,6 +12,8 @@ display = ":0"
 width = 0
 # Display height (0 = auto-detect)
 height = 0
+# Window manager to launch when auto-creating X11 display ("openbox", "fluxbox", "" to disable)
+window_manager = "openbox"
 
 [http]
 # HTTP server port (for health checks and WebRTC signaling)
